@@ -1,0 +1,15 @@
+<?php
+/**
+ * Defines the AJAX interface for Mnemo.
+ *
+ * Copyright 2011 Horde LLC (http://www.horde.org/)
+ *
+ * See the enclosed file LICENSE for license information (ASL). If you
+ * did not receive this file, see http://www.horde.org/licenses/asl.php.
+ *
+ * @author   Jan Schneider <jan@horde.org>
+ * @category Horde
+ * @license  http://www.horde.org/licenses/asl.php ASL
+ * @package  Mnemo
+ */
+class Mnemo_Ajax_Application extends Horde_Core_Ajax_Application {}
