@@ -16,8 +16,8 @@
   <email>jan@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2011-10-22</date>
- <time>14:48:36</time>
+ <date>2011-11-30</date>
+ <time>18:44:10</time>
  <version>
   <release>3.0.4</release>
   <api>3.0.0</api>
@@ -28,6 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl.php">ASL</license>
  <notes>
+* [jan] Fix remembering the expansion state of the notepads panel (Bug #10797).
 * [jan] Update Japanese translation (Hiromi Kimura &lt;hiromi@tac.tsukuba.ac.jp&gt;).
  </notes>
  <contents>
@@ -57,6 +58,7 @@
      <dir name="Imple">
       <file name="EditNote.php" role="horde" />
      </dir> <!-- /lib/Ajax/Imple -->
+     <file name="Application.php" role="horde" />
     </dir> <!-- /lib/Ajax -->
     <dir name="Block">
      <file name="Note.php" role="horde" />
@@ -600,6 +602,7 @@
    <install as="mnemo/lib/Driver.php" name="lib/Driver.php" />
    <install as="mnemo/lib/Exception.php" name="lib/Exception.php" />
    <install as="mnemo/lib/Mnemo.php" name="lib/Mnemo.php" />
+   <install as="mnemo/lib/Ajax/Application.php" name="lib/Ajax/Application.php" />
    <install as="mnemo/lib/Ajax/Imple/EditNote.php" name="lib/Ajax/Imple/EditNote.php" />
    <install as="mnemo/lib/Block/Note.php" name="lib/Block/Note.php" />
    <install as="mnemo/lib/Block/Summary.php" name="lib/Block/Summary.php" />
@@ -893,9 +896,10 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2011-10-22</date>
+   <date>2011-11-30</date>
    <license uri="http://www.horde.org/licenses/asl.php">ASL</license>
    <notes>
+* [jan] Fix remembering the expansion state of the notepads panel (Bug #10797).
 * [jan] Update Japanese translation (Hiromi Kimura &lt;hiromi@tac.tsukuba.ac.jp&gt;).
    </notes>
   </release>
