@@ -2,6 +2,7 @@
 v3.0.4-git
 ----------
 
+[jan] Fix remembering the expansion state of the notepads panel (Bug #10797).
 [jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).
 
 
